11/2/10 first pass at voltmeter (displays plate voltage)
11/2/10 add zoom control to E-field detector
11/2/10 EFieldDetectorView was getting too large, move body and probe to separate files
11/2/10 generalize wire that connects a probe to a meter
11/1/10 constrain E-field probe location to be inside the bounds of the world
11/1/10 clean up handling of visibility for E-field detector
11/1/10 fix detector probe drag behavior, constrain to the play area via the model "world bounds"
11/1/10 add world bounds to model, to constrain placement of model elements
11/1/10 make the E-field detector wire look more natural
11/1/10 setOpaque(false) on various Swing components in the E-field Detector
11/1/10 get wire connection working properly for rotated E-field probe 
10/30/10 confirm that E-field detector probe remains aligned with origin when rotated
10/30/10 TestDragPSwing, test app to demonstrate a general problem with dragging PSwing nodes, see #2557
10/30/10 decrease size of battery to match the part of the battery that's in the same 2D plane as the E-field probe
10/29/10 add geometry of battery to model, needed by voltmeter and collision detection
# 0.00.35 (45524) Oct 28, 2010
10/28/10 demonstrate progress on E-field detector
10/27/10 test app for detector wire
10/27/10 fix "Show Values" control in detector so that it doesn't hide vector labels
10/25/10 clip vectors to display area
10/25/10 fix initial layout of field detector
10/25/10 combine vector label and value to simplify detector layout code
10/24/10 center labels and values above/below tails of detector vectors, labels above values
10/24/10 decided E-field in battery will be zero, because field detector shows capacitor-specific field vectors (Noah P)
10/24/10 remove dielectric gap from model, per Noah P.
10/24/10 show absolute values in field detector, with no comma in numbers
10/24/10 model for detector vectors: 0 outside plates, either air or dielectric inside plates
# 0.00.34 (45344) Oct 22, 2010