@@ -8,6 +8,7 @@ import edu.colorado.phet.capacitorlab.CLPaints;
 import edu.colorado.phet.capacitorlab.model.EFieldDetector;
 import edu.colorado.phet.capacitorlab.model.ModelViewTransform;
 import edu.colorado.phet.capacitorlab.model.World;
+import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
 import edu.umd.cs.piccolo.PNode;
 
 /**
@@ -26,21 +27,23 @@ public class EFieldDetectorView {
     private final EFieldDetectorProbeNode probeNode;
     private final ProbeWireNode wireNode;
     
-    public EFieldDetectorView( EFieldDetector detector, World world, ModelViewTransform mvt, PNode dragBoundsNode, boolean dev ) {
+    public EFieldDetectorView( final EFieldDetector detector, World world, ModelViewTransform mvt, PNode dragBoundsNode, boolean dev ) {
         bodyNode = new EFieldDetectorBodyNode( detector, dragBoundsNode );
         probeNode = new EFieldDetectorProbeNode( detector, world, mvt, dev );
         wireNode = new ProbeWireNode( bodyNode, probeNode, BODY_CONTROL_POINT_OFFSET, PROBE_CONTROL_POINT_OFFSET, 
                 bodyNode.getConnectionOffset(), probeNode.getConnectionOffset(), CLPaints.EFIELD_DETECTOR_WIRE );
+        
+        detector.addVisibleObserver( new SimpleObserver() {
+            public void update() {
+                setVisible( detector.isVisible() );
+            }
+        });
     }
     
-    public void setVisible( boolean visible ) {
+    private void setVisible( boolean visible ) {
         bodyNode.setVisible( visible );
         probeNode.setVisible( visible );
         wireNode.setVisible( visible );
-    }
-    
-    public boolean isVisible() {
-        return bodyNode.isVisible();
     }
     
     public PNode getBodyNode() {
